Added authentication and authorization
