# swagger.json
@@ -7,9 +7,7 @@
   "paths": {
     "/api/Events/get-event": {
       "get": {
-        "tags": [
-          "Events"
-        ],
+        "tags": ["Events"],
         "operationId": "GetEvent",
         "parameters": [
           {
@@ -47,9 +45,7 @@
     },
     "/api/Events/create-event": {
       "post": {
-        "tags": [
-          "Events"
-        ],
+        "tags": ["Events"],
         "requestBody": {
           "content": {
             "application/json": {
@@ -95,9 +91,7 @@
     },
     "/api/Events/update-event": {
       "post": {
-        "tags": [
-          "Events"
-        ],
+        "tags": ["Events"],
         "requestBody": {
           "content": {
             "application/json": {
@@ -143,9 +137,7 @@
     },
     "/api/Events/register-to-event": {
       "post": {
-        "tags": [
-          "Events"
-        ],
+        "tags": ["Events"],
         "requestBody": {
           "content": {
             "application/json": {
@@ -191,9 +183,7 @@
     },
     "/api/Events/deregister-from-event": {
       "post": {
-        "tags": [
-          "Events"
-        ],
+        "tags": ["Events"],
         "requestBody": {
           "content": {
             "application/json": {
@@ -239,9 +229,7 @@
     },
     "/api/Events/get-waiting-list": {
       "get": {
-        "tags": [
-          "Events"
-        ],
+        "tags": ["Events"],
         "operationId": "GetWaitingList",
         "parameters": [
           {
@@ -288,9 +276,7 @@
     },
     "/api/Events/get-approved-list": {
       "get": {
-        "tags": [
-          "Events"
-        ],
+        "tags": ["Events"],
         "operationId": "GetApprovedList",
         "parameters": [
           {
@@ -337,9 +323,7 @@
     },
     "/api/Events/update-event-user": {
       "post": {
-        "tags": [
-          "Events"
-        ],
+        "tags": ["Events"],
         "requestBody": {
           "content": {
             "application/json": {
@@ -385,9 +369,7 @@
     },
     "/api/Events/get-nearby-events": {
       "get": {
-        "tags": [
-          "Events"
-        ],
+        "tags": ["Events"],
         "operationId": "GetNearbyEvents",
         "parameters": [
           {
@@ -459,8 +441,8 @@
             "format": "int32"
           },
           "ownerId": {
-            "type": "integer",
-            "format": "int32"
+            "type": "string",
+            "nullable": true
           },
           "title": {
             "type": "string",
@@ -496,15 +478,11 @@
         "additionalProperties": false
       },
       "EventCreateDto": {
-        "required": [
-          "ownerId",
-          "title"
-        ],
+        "required": ["ownerId", "title"],
         "type": "object",
         "properties": {
           "ownerId": {
-            "type": "integer",
-            "format": "int32"
+            "type": "string"
           },
           "title": {
             "type": "string"
@@ -528,9 +506,7 @@
         "additionalProperties": false
       },
       "EventUpdateDto": {
-        "required": [
-          "id"
-        ],
+        "required": ["id", "ownerId"],
         "type": "object",
         "properties": {
           "id": {
@@ -538,8 +514,7 @@
             "format": "int32"
           },
           "ownerId": {
-            "type": "integer",
-            "format": "int32"
+            "type": "string"
           },
           "title": {
             "type": "string",
@@ -567,10 +542,7 @@
         "additionalProperties": false
       },
       "EventUserDto": {
-        "required": [
-          "eventId",
-          "userId"
-        ],
+        "required": ["eventId", "userId"],
         "type": "object",
         "properties": {
           "eventId": {
@@ -578,8 +550,7 @@
             "format": "int32"
           },
           "userId": {
-            "type": "integer",
-            "format": "int32"
+            "type": "string"
           }
         },
         "additionalProperties": false
@@ -588,18 +559,14 @@
         "type": "object",
         "properties": {
           "userId": {
-            "type": "integer",
-            "format": "int32"
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
       },
       "EventUserUpdateDto": {
-        "required": [
-          "approved",
-          "eventId",
-          "userId"
-        ],
+        "required": ["approved", "eventId", "userId"],
         "type": "object",
         "properties": {
           "eventId": {
@@ -607,8 +574,7 @@
             "format": "int32"
           },
           "userId": {
-            "type": "integer",
-            "format": "int32"
+            "type": "string"
           },
           "approved": {
             "type": "boolean"
